force-app/main/default/objects/Grant_Application_Event__e/Grant_Application_Event__e.object-meta.xml
<CustomObject>
    <label>Grant Application Event</label>
    <pluralLabel>Grant Application Events</pluralLabel>
</CustomObject>