force-app/main/default/objects/Grant_Application_Event__e/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <label>Application Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>