force-app/main/default/objects/Grant_Application_Event__e/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <label>Application Name</label>
    <type>Text</type>
    <length>50</length>
</CustomField>