force-app/main/default/objects/Grant_Application_Event__e/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <label>Organization Name</label>
    <type>Text</type>
    <length>200</length>
</CustomField>